<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="TextView" />

    <ProgressBar
        android:id="@+id/progress_bar_healthy"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="350dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:max="100"
        android:progress="30"
        android:progressDrawable="@drawable/progressbar_bg" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:text="@string/translation_words_activity"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/style2"
        android:shadowColor="@android:color/holo_blue_bright"
        android:text="@string/Boya" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/style2"
        android:shadowColor="@android:color/holo_blue_bright"
        android:text="@string/Bujep" />
    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/style2"
        android:shadowColor="@android:color/holo_blue_bright"
        android:text="@string/Koort" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/style2"
        android:shadowColor="@android:color/holo_blue_bright"
        android:text="@string/Nop" />

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="130dp" />

    <Button
        android:id="@+id/button"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/style1"
        android:text="@string/check" />
</LinearLayout>