<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="TextView" />

    <ProgressBar
        android:id="@+id/progress_bar_healthy"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="350dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:max="100"
        android:progress="30"
        android:progressDrawable="@drawable/progressbar_bg" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/translation_sentence"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/translation_sentence_activity"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:columnCount="3">

        <Button
            android:id="@+id/Button"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:text="Button"
            android:background="@drawable/style2"
            android:shadowColor="@android:color/holo_blue_bright"/>

        <Button
            android:id="@+id/button7"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:text="Button"
            android:background="@drawable/style2"
            android:shadowColor="@android:color/holo_blue_bright"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:text="Button"
            android:background="@drawable/style2"
            android:shadowColor="@android:color/holo_blue_bright"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:text="Button"
            android:background="@drawable/style2"
            android:shadowColor="@android:color/holo_blue_bright"/>

        <Button
            android:id="@+id/button10"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:text="Button"
            android:background="@drawable/style2"
            android:shadowColor="@android:color/holo_blue_bright"/>

        <Button
            android:id="@+id/button11"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:text="Button"
            android:background="@drawable/style2"
            android:shadowColor="@android:color/holo_blue_bright"/>
    </androidx.gridlayout.widget.GridLayout>

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <Button
        android:id="@+id/button"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/style1"
        android:text="@string/check" />
</LinearLayout>